--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 appdirs==1.4.4
+asttokens==2.4.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
 colorama==0.4.6
+comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
 docker-pycreds==0.4.0
+exceptiongroup==1.2.2
+executing==2.0.1
 filelock==3.14.0
 fonttools==4.51.0
 fsspec==2024.3.1
@@ -16,15 +22,23 @@ GitPython==3.1.43
 hyperopt==0.2.7
 idna==3.7
 imageio==2.34.2
+importlib_metadata==8.4.0
 importlib_resources==6.4.0
 intel-openmp==2021.4.0
+ipykernel==6.29.5
+ipython==8.18.1
+jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.8.4
+matplotlib-inline==0.1.7
 mkl==2021.4.0
 mpmath==1.3.0
+nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
@@ -42,17 +56,25 @@ nvidia-nvtx-cu12==12.1.105
 opt-einsum==3.3.0
 packaging==24.0
 pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.3.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
 protobuf==4.25.3
 psutil==5.9.8
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py4j==0.10.9.7
 pycatch22==0.4.5
+Pygments==2.18.0
 pyparsing==3.1.2
 pyro-api==0.1.2
 pyro-ppl==1.9.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+pyzmq==26.1.1
 requests==2.31.0
 scikit-learn==1.4.2
 scipy==1.13.0
@@ -61,6 +83,7 @@ sentry-sdk==2.0.1
 setproctitle==1.3.3
 six==1.16.0
 smmap==5.0.1
+stack-data==0.6.3
 sympy==1.12
 tabulate==0.9.0
 tbb==2021.12.0
@@ -68,11 +91,14 @@ threadpoolctl==3.5.0
 torch==2.3.0
 torchaudio==2.3.0
 torchvision==0.18.0
+tornado==6.4.1
 tqdm==4.66.2
+traitlets==5.14.3
 triton==2.3.0
 tsaug==0.2.1
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 wandb==0.16.6
+wcwidth==0.2.13
 zipp==3.18.1
